wbms-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: wbms-backend
  name: wbms-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wbms-backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/wbms-beac-armin-net: "true"
        io.kompose.service: wbms-backend
    spec:
      containers:
        - image: almyra/wbms_tbe:latest
          name: wbms-backend
          ports:
            - containerPort: 6001
              hostPort: 6001
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /wbms_be/upload
              name: wbms-backend-claim0
      restartPolicy: Always
      volumes:
        - name: wbms-backend-claim0
          persistentVolumeClaim:
            claimName: wbms-backend-claim0
status: {}
