wbms-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: wbms-db
  name: wbms-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wbms-db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/wbms-beac-armin-net: "true"
        io.kompose.service: wbms-db
    spec:
      containers:
        - env:
            - name: MARIADB_DATABASE
              value: wbms
            - name: MARIADB_EXTRA_FLAGS
              value: --innodb_strict_mode=0 --innodb_log_file_size=512M --innodb_log_buffer_size=256M
            - name: MARIADB_PASSWORD
              value: "3031323334"
            - name: MARIADB_REPLICATION_MODE
              value: master
            - name: MARIADB_REPLICATION_PASSWORD
              value: "3031323334"
            - name: MARIADB_REPLICATION_USER
              value: wbms_dbr
            - name: MARIADB_ROOT_PASSWORD
              value: P@ss3031323334
            - name: MARIADB_ROOT_USER
              value: wbms_dba
            - name: MARIADB_USER
              value: wbms_dbu
          image: bitnami/mariadb
          name: wbms-db
          ports:
            - containerPort: 3306
              hostPort: 33061
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /bitnami/mariadb
              name: mariadb-data-pks04
      restartPolicy: Always
      volumes:
        - name: mariadb-data-pks04
          persistentVolumeClaim:
            claimName: mariadb-data-pks04
status: {}
