wbms-phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: wbms-phpmyadmin
  name: wbms-phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wbms-phpmyadmin
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/wbms-beac-armin-net: "true"
        io.kompose.service: wbms-phpmyadmin
    spec:
      containers:
        - env:
            - name: PMA_ARBITRARY
              value: "1"
          image: phpmyadmin
          name: wbms-phpmyadmin
          ports:
            - containerPort: 80
              hostPort: 8080
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
