wbms-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: wbms-backend
  name: wbms-backend
spec:
  externalIPs:
      - 203.0.113.1
  ports:
    - protocol: TCP
      port: 6001
      targetPort: 6001

  type: NodePort
  selector:
    io.kompose.service: wbms-backend
status:
  loadBalancer: {}
