wbms-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: wbms-db
  name: wbms-db
spec:
  ports:
    - protocol: TCP
      port: 33061
      targetPort: 3306
  type: NodePort # Adjust the service type as needed
  selector:
    io.kompose.service: wbms-db
status:
  loadBalancer: {}
